Disable GPU compositing on browser side when GPU process crash enough times and hardware GPU is disabled.

BUG=783728
TEST=manual
R=piman@chromium.org,danakj@chromium.org

Change-Id: I0622bfa36818ddfc28591dadecf880ab7821c790